世界架构版本01
需要继续重构，提交commit以存档

--- a/UnityProject/UnityProject.csproj
+++ b/UnityProject/UnityProject.csproj
@@ -80,6 +80,8 @@
   <ItemGroup>
     <Compile Include="Assets\3rd\Noise.cs" />
     <Compile Include="Assets\Chunk.cs" />
+    <Compile Include="Assets\TMP\Chunk.cs" />
+    <Compile Include="Assets\World.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
