项目重开 重构了所有代码

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ UnityProject/Temp
 UnityProject/Library
 
 UnityProject/\.vs/UnityProject/v15/
+
+
+UnityProject/Ilmenite Main/\.vs/
+
+UnityProject/Ilmenite Main/Library/
