ION通过了简单黑盒测试

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ UnityProject/\.vs/UnityProject/v15/
 UnityProject/Ilmenite Main/\.vs/
 
 UnityProject/Ilmenite Main/Library/
+/UnityProject/Ilmenite Main/Temp
